--- a/contact.html
+++ b/contact.html
@@ -3,14 +3,14 @@
 		<head>
 			<title> Into Kilmainham: A VR Story: Contact Us </title>
 			
-             <link rel="shortcut icon" href="assets/image/IntoKilmainham_logo.png">
+             <link rel="shortcut icon" href="Assets/image/IntoKilmainham_logo.png">
 					
-			<link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
-			<link href='https://fonts.googleapis.com/css?family=Exo+2:400italic' rel='stylesheet' type='text/css'>
-			<link href='https://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
+			<link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
+            <link href='https://fonts.googleapis.com/css?family=Vollkorn' rel='stylesheet' type='text/css'>
+            <link href='https://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
 			
-			<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" >
-			<link href="css/aminalstyle.css" rel="stylesheet" type="text/css">
+			<link href="CSS/bootstrap.min.css" rel="stylesheet" type="text/css" >
+			<link href="CSS/kilmainhamstyle.css" rel="stylesheet" type="text/css">
             <!-- Google Maps API -->
             <script src="http://maps.googleapis.com/maps/api/js"></script>
 			<script>
@@ -29,7 +29,7 @@
 		<body>
 			<div class="navbar navbar-inverse navbar-fixed-top">
 				<div class="container">
-					<a href="index.html" class ="navbar-brand"><img class="aminal-logo-top" src="assets/image/IntoKilmainham_logo.png" alt="Into Kilmainham VR Logo"/></a>
+					<a href="index.html" class ="navbar-brand"><img class="kilmainham-logo-top" src="Assets/image/IntoKilmainham_logo.png" alt="Into Kilmainham VR Logo"/></a>
 					<button class="navbar-toggle" data-toggle="collapse" data-target=".navHeaderCollapse">
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
@@ -40,25 +40,25 @@
 							<li ><a href="index.html">home</a></li>
 							<li><a href="personnel.html">personnel</a></li>
                             <li><a href= "video_page.html">video </a></li>
-                            <li class="active"><a href="contact.html">contact</a></li>
+                            <li class="active"><a href="contact.html">contact us</a></li>
 						</ul>
 					</div>
 				</div>
 			</div>
 			<div class="container">
-				<div class="jumbotron aminal-top-box">
+				<div class="jumbotron kilmainham-top-box">
 					<h1 class="text-top"> 
 					Contact Us
 					</h1>
 				</div>
 			</div>
-			<div class="container aminal-content">
+			<div class="container kilmainham-content">
 				<div class="row">
 					<div class="col-md-6">
 						<h3 class="text-center">Email</h3>
 						<br/>
 						<p> 
-						<img class="pull-left aminal-personnel-img" src="assets/image/email.png" alt= "Email">
+						<img class="pull-left kilmainham-personnel-img" src="Assets/image/email.png" alt= "Email">
 						Email us at:
                         </br></br>
                         Alina: &nbsp &nbsp <a href="mailto:shumovaa@tcd.ie"> </a></br>
@@ -71,7 +71,7 @@
 						<h3 class="text-center">Location</h3>
 						<br/>
 						<p> 
-						<img class="pull-left aminal-personnel-img" src="assets/image/location.png" alt= "Location">
+						<img class="pull-left kilmainham-personnel-img" src="Assets/image/location.png" alt= "Location">
 						If you feel like dropping in, here's where you'll find us:</p>
                         <div id="googleMap" style="width:20vwpx;height:15vh;"></div>
 					</div>
@@ -79,27 +79,27 @@
 						<h3 class="text-center">Follow us</h3>
 						<br/>
 						<p> 
-						<img class="pull-left aminal-personnel-img" src="assets/image/Tumblr_Icon.png" alt= "Tumblr">
-						Follow us and see how we got here in our blog: <a href="https://www.tumblr.com/blog/amazingidm2team2015">Into Kilmainham: A VR Story</a></p>
+						<img class="pull-left kilmainham-personnel-img" src="Assets/image/Tumblr_Icon.png" alt= "Tumblr">
+						Follow us and see how we got here in our blog: <a href="http://intokilmainham.tumblr.com/">Into Kilmainham: A VR Story</a></p>
 					</div>
                     <div class="col-md-6">
 						<h3 class="text-center">Check us out</h3>
 						<br/>
 						<p> 
-						<img class="pull-left aminal-personnel-img" src="assets/image/linkedin_icon.png" alt= "Linkedin">
+						<img class="pull-left kilmainham-personnel-img" src="Assets/image/linkedin_icon.png" alt= "Linkedin">
 						Find out more about us via our Linkedin profiles:
                         </br></br>
                         <a href= "https://ie.linkedin.com/in/alinaecke"> Alina</a>  </br>
                        	<a href= "https://ie.linkedin.com/pub/philip-hickey/87/336/133"> Phil </a>  </br>
                         <a href= "https://ie.linkedin.com/in/neilocarroll"> Neil </a> </br>
                         <a href= "https://www.linkedin.com/pub/conor-sneyd/a5/b72/208"> Conor </a>  </br>
-                        <a href="https://ie.linkedin.com/in/jamesos"> James </a></p>
+                        <a href= "https://ie.linkedin.com/in/jamesos"> James </a></p>
 					</div>
 					</div>					
 				</div>			
 			<div class="navbar navbar-inverse navbar-fixed-bottom">
 				<div class="container">
-					<p class="navbar-text pull-right aminal-bottom-text">Site and Contents &copy; 2015 Aminal Productions Ltd. </p>
+					<p class="navbar-text pull-right kilmainham-bottom-text">Site and Contents &copy; 2015 kilmainham Productions Ltd. </p>
 				</div>
 			</div>
 			<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
