--- a/index.html
+++ b/index.html
@@ -3,28 +3,28 @@
 		<head>
 			<title> Into Kilmainham: A VR Story </title>
 			
-            <link rel="shortcut icon" href="assets/image/IntoKilmainham_logo.png">
+            <link rel="shortcut icon" href="Assets/image/IntoKilmainham_logo.png">
 			<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 			
-			<link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
-			<link href='https://fonts.googleapis.com/css?family=Exo+2:400italic' rel='stylesheet' type='text/css'>
-			<link href='https://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
-			<link href='https://fonts.googleapis.com/css?family=Maven+Pro:500' rel='stylesheet' type='text/css'>
+			<link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
+            <link href='https://fonts.googleapis.com/css?family=Vollkorn' rel='stylesheet' type='text/css'>
+            <link href='https://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
 			
-			<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" >
-			<link href="css/aminalstyle.css" rel="stylesheet" type="text/css">
+			<link href="CSS/bootstrap.min.css" rel="stylesheet" type="text/css" >
+			<link href="CSS/kilmainhamstyle.css" rel="stylesheet" type="text/css">
 			
 		</head>	
 		<body>
         <div class="page">
 			<video loop autoplay id="backgroundVideo" preload="auto">
-					<source src="assets/video/Corridor_Animation.webm" type="video/webm">
-                    	<source src="assets/videos/Corridor_Animation.mp4" type= "video/mp4">
+					<source src="Assets/video/Corridor_Animation.webm" type="video/webm">
+                    	<source src="Assets/video/Corridor_Animation.mp4" type= "video/mp4">
+                        <source src= "Assets/video/Corridor_Animation.ogg" type= "video/ogg">
 			</video>
 			
 			<div class="navbar navbar-inverse navbar-fixed-top">
 				<div class="container">
-					<a href="index.html" class ="navbar-brand"><img class="aminal-logo-top" src="assets/image/IntoKilmainham_logo.png" alt="Small Logo"/></a>
+					<a href="index.html" class ="navbar-brand"><img class="kilmainham-logo-top" src="Assets/image/IntoKilmainham_logo.png" alt="Small Logo"/></a>
 					<button class="navbar-toggle" data-toggle="collapse" data-target=".navHeaderCollapse">
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
@@ -34,29 +34,29 @@
 						<ul class = "nav navbar-nav navbar-right">
 							<li class="active"><a href="index.html">home</a></li>
 							<li><a href="personnel.html">personnel</a></li>
-                            <li><a href= "video_page.html">video </a></li>
-                            <li><a href= "contact.html">contact us </a></li>
+                            <li><a href= "video_page.html">video</a></li>
+                            <li><a href= "contact.html">contact us</a></li>
 						</ul>
 					</div>
 				</div>
 			</div>
-		<div class="container aminal-content">
-			<div class="col-md-4 aminal-front-col-left">
+		<div class="container kilmainham-content">
+			<div class="col-md-4 kilmainham-front-col-left">
 				<h3 class="index_content"><a href="https://www.tcd.ie/courses/postgraduate/az/course.php?id=DPTCS-IDME-1F09">Interactive Digital Media</a></h3>
 					<p>The M.Sc. in Interactive Digital Media (formerly called M.Sc in Multimedia Systems) has been running since 1996. Each year, 20 students are selected from different backgrounds to receive a foundation in the theory and practice of creating and developing applications using all digital media types. The programme presents courses in Interactive Narrative, Graphic Design, Audio and Video Technologies in combination with Introduction to Computer Science and Client and Server Programming Technologies and Platforms. This M.Sc. is different in that it focuses on teaching theory rather than on applications. Students are exposed to programming languages and platforms as well as methodologies for the creation, capture and presentation of text, graphics, audio and moving images.
 </br></br>
 Basic computer science courses are offered for students with no formal background in programming and students with experience in programming are taught specialized programming methodologies for interactive digital platforms.
 </p>
 			</div>
-			<div class="col-md-4 aminal-front-col-mid">
-				<h3 class="index_content"><a href="https://www.tumblr.com/blog/amazingidm2team2015">Into Kilmainham: A VR Story</a></h3>
+			<div class="col-md-4 kilmainham-front-col-mid">
+				<h3 class="index_content"><a href="http://intokilmainham.tumblr.com/">Into Kilmainham: A VR Story</a></h3>
 					<p> The player controls an unnamed character who finds themselves drawn into Kilmainham jail one night, and must find a way to escape. Echoes of the past still linger in the jail, and the player 
 encounters the ghosts of various inmates and staff from the prison’s history. The player must listen to their stories and insights in order to solve puzzles and advance through the jail towards freedom. 
 </br></br>
 The game will cover three broad areas of the prison’s history: its early days from 1790 to 1850, including the Great Famine; the experimental expansion of the prison in the Victorian era; and finally the prison’s political significance in the wake of the 1916 Rising. There is a puzzle for each section of the game, which is thematically linked to the relevant time period. The game will provide the player with various insights into the history of the jail, however it does not have an explicitly educational purpose; it is rather intended to be an immersive and entertaining experience, using cutting edge technology to give players a glimpse into the past.</p>
 			</div>
 			
-			<div class="col-md-4 aminal-front-col-right">
+			<div class="col-md-4 kilmainham-front-col-right">
 				<h3 class="index_content"><a href= "https://www.google.com/get/cardboard/">Google Cardboard</a></h3>
 					<p> Google Cardboard works by placing your phone at the optimal distance away from the lenses. Then, by using compatible apps, the lenses create a 3D effect when held up to your eyes. You can even move your head around, and the images will respond as if you're in the same place as what's displayed on your screen. For example, you can use the Street Vue demo and explore the streets of Paris while viewing your surroundings in a virtual reality that reacts to your actual position in space. 
 					</br></br>
@@ -68,7 +68,7 @@ The game will cover three broad areas of the prison’s history: its early days fr
 		
 		<div class="navbar navbar-inverse navbar-fixed-bottom">
 			<div class="container">
-				<p class="navbar-text pull-right aminal-bottom-text">Site and Contents &copy; 2015 Into Kilmainham: A VR Story </p>
+				<p class="navbar-text pull-right kilmainham-bottom-text">Site and Contents &copy; 2015 Into Kilmainham: A VR Story </p>
 		</div>
 	</div>
 
