--- a/video_page.html
+++ b/video_page.html
@@ -3,22 +3,21 @@
 		<head>
 			<title> Into Kilmainham: A VR Story: Animation </title>
 			
-            <link rel="shortcut icon" href="assets/image/IntoKilmainham_logo.png">
+            <link rel="shortcut icon" href="Assets/image/IntoKilmainham_logo.png">
 			<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 			
-			<link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
-			<link href='https://fonts.googleapis.com/css?family=Exo+2:400italic' rel='stylesheet' type='text/css'>
-			<link href='https://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
-			<link href='https://fonts.googleapis.com/css?family=Maven+Pro:500' rel='stylesheet' type='text/css'>
+			<link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
+            <link href='https://fonts.googleapis.com/css?family=Vollkorn' rel='stylesheet' type='text/css'>
+            <link href='https://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
 			
-			<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" >
-			<link href="css/aminalstyle.css" rel="stylesheet" type="text/css">
+			<link href="CSS/bootstrap.min.css" rel="stylesheet" type="text/css" >
+			<link href="CSS/kilmainhamstyle.css" rel="stylesheet" type="text/css">
 			
 		</head>	
         <body>
 			<div class="navbar navbar-inverse navbar-fixed-top">
 				<div class="container">
-					<a href="index.html" class ="navbar-brand"><img class="aminal-logo-top" src="assets/image/IntoKilmainham_logo.png" alt="Small Logo"/></a>
+					<a href="index.html" class ="navbar-brand"><img class="kilmainham-logo-top" src="Assets/image/IntoKilmainham_logo.png" alt="Small Logo"/></a>
 					<button class="navbar-toggle" data-toggle="collapse" data-target=".navHeaderCollapse">
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
@@ -36,20 +35,24 @@
 			</div>
 			
 			<div class="container">
-				<div class="jumbotron aminal-top-box">
-				<!--<img src="assets/image/IntoKilmainham_logo.png" alt="Logo"/>-->
+				<div class="jumbotron kilmainham-top-box">
+				<!--<img src="Assets/image/IntoKilmainham_logo.png" alt="Logo"/>-->
 					
 				</div>
 			</div>
-			
-				 <video loop controls class="mainVideo" preload="auto">
-					<source src="assets/video/Corridor_Animation.webm" type="video/webm">
-                    	<source src="assets/videos/Corridor_Animation.mp4" type= "video/mp4">
-			</video>
-			
+            
+            <div class= "jumbotron">
+            	<div class= "container">
+			<iframe width="1280" height="720" src="https://www.youtube.com/embed/ynP6oIjWlJw?rel=0" frameborder="0" allowfullscreen></iframe>
+				 <!--<video loop controls class="mainVideo" preload="auto">
+					<source src="Assets/video/Corridor_Animation.webm" type="video/webm">
+                    	<source src="Assets/video/Corridor_Animation.mp4" type= "video/mp4">
+                        <source src= "Assets/video/Corridor_Animation.ogg" type= "video/ogg"> -->
+			</div>
+            </div>			
 			<div class="navbar navbar-inverse navbar-fixed-bottom">
 				<div class="container">
-					<p class="navbar-text pull-right aminal-bottom-text">Site and Contents &copy; 2015 Into Kilmainham: A VR Story </p>
+					<p class="navbar-text pull-right kilmainham-bottom-text">Site and Contents &copy; 2015 Into Kilmainham: A VR Story </p>
 				</div>
 			</div>
 	
